--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "bootstrap": "4.0.0-alpha.6",
     "vue": "^2.4.1",
     "vue-router": "^2.7.0",
